@@ -1,5 +1,6 @@
 7.x-1.14.x
 ----------
+ - #1968 Fixed "Reset" button on search page to also resets facets.
  - #1985 Add documentation for resource behavior on harvested datasets.
  - #1907 Added back TAB delimiter option for datastore imports.
  - #1955 Update ahoy docker tooling for local environment usecase.
